# QuickHull

./: CMakeLists.txt  README.md  main.cc  qhull.h
